tests/baselines/reference/superCallOutsideConstructor.errors.txt
tests/cases/compiler/superCallOutsideConstructor.ts(6,9): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/compiler/superCallOutsideConstructor.ts(12,13): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/compiler/superCallOutsideConstructor.ts(16,13): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== tests/cases/compiler/superCallOutsideConstructor.ts (3 errors) ====
    class C {
        foo() { }
    }
     
    class D extends C {
        x = super(); 
            ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
     
        constructor() {
            super();
     
            var y = () => {
                super(); 
                ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            }
    
            var y2 = function() {
                super();
                ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
            }
        }
    }
     
    var d = new D();
    